# Convene-Backend

./: .env.example  .gitignore  API_REFERENCE.md  Dockerfile  README.md  pyproject.toml
app/: __init__.py  agents.py  auth.py  contracts.py  graph.py  main.py  registry.py  scoring.py  storage.py  streaming.py  tools_mcp.py
db/: schema.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend-legacy/: app.js  index.html  style.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/components/debate/: ArtifactsPanel.tsx  BouncingBallsBackground.tsx  Configurator.tsx  LiveStream.tsx  LoginPanel.tsx  RadarCanvas.tsx  SettingsPanel.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx
frontend/src/hooks/: useDebateStream.ts
frontend/src/lib/: supabaseClient.ts
frontend/src/services/: api.ts
scripts/: smoke_api.py
tests/: test_api.py  test_auth_persistence.py  test_graph.py  test_tools_mcp.py
