[project]
name = "debatestack-backend"
version = "0.1.0"
description = "DebateStack Build Week backend"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14",
    "fastapi>=0.111",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "pypdf>=4",
    "PyJWT>=2.8",
    "asyncpg>=0.29",
    "bcrypt>=4.0",
    "httpx>=0.27",
    "pydantic[email]>=2",
    "langchain-groq>=1.1",
    "langgraph>=0.4",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
